# libhutznohmd

./: .bazelrc  .clang-format  .gitignore  BUILD  CMakeLists.txt  Doxyfile  MODULE.bazel  README.md  astyle.rc  clean  example  make  make.py  precommit  prepare  readme  sonar-cxx.template  test  uncrustify.cfg
examples/http/: CMakeLists.txt  main.cpp
examples/performance/: CMakeLists.txt  main.cpp
examples/socket/: CMakeLists.txt  main.cpp
integrationtest/: CMakeLists.txt  files.txt
integrationtest/http/: server.cpp  socket.cpp
integrationtest/socket/: socket.cpp  utility.cpp
src/: CMakeLists.txt  common.hpp  files.txt  hutzn.cpp  hutzn.hpp  librest.hpp  rest.cpp  rest.hpp  version.cpp.in  version.hpp
src/demux/: demultiplex_handler.cpp  demultiplex_handler.hpp  demultiplexer.cpp  demultiplexer.hpp  demultiplexer_accept_map.cpp  demultiplexer_accept_map.hpp  demultiplexer_ordered_mime_map.cpp  demultiplexer_ordered_mime_map.hpp  demux_disconnect_interface.cpp  demux_disconnect_interface.hpp  disconnect_interface.cpp  disconnect_interface.hpp  error_handler.cpp  error_handler.hpp  request_handler_holder.cpp  request_handler_holder.hpp  request_processor.cpp  request_processor.hpp  reset_error_handler_interface.cpp  reset_error_handler_interface.hpp  usage_interface.cpp  usage_interface.hpp
src/doc/: concept.hpp  deployment.hpp  development.hpp  etymology.hpp  gettingstarted.hpp  headerfields.hpp  httpparser.hpp  lifetime.hpp  mainconcept.hpp  mainpage.hpp  roadmap.hpp
src/doc/headerfields/: auth.hpp  basichttpsupport.hpp  byteserving.hpp  caching.hpp  conditional.hpp  cookies.hpp  encoding.hpp
src/examples/: CMakeLists.txt
src/examples/http/: CMakeLists.txt  main.cpp
src/examples/performance/: CMakeLists.txt  main.cpp
src/examples/res/: request0
src/examples/socket/: CMakeLists.txt  main.cpp
src/http/: _server.cpp  _server.hpp  connectionsocket.cpp  connectionsocket.hpp  constants.hpp  httpinterface.hpp  listenersocket.cpp  listenersocket.hpp  request.cpp  request.hpp  response.cpp  response.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp  socketinterface.hpp
src/http/headers/: accept.cpp  accept.hpp  mime.cpp  mime.hpp
src/http/parser/: bisonwrapper.cpp  bisonwrapper.h  data.cpp  data.h  http.cpp  http.hpp  http.y  httpparser.cpp  httpparser.h  httpparser.hpp  httpscan.h  lexer.cpp  lexer.h  request_parser.cpp  request_parser.hpp  requestparser.cpp  requestparser.hpp  response_parser.cpp  response_parser.hpp  responseparser.cpp  responseparser.hpp
src/include/: CMakeLists.txt
src/integrationtest/: CMakeLists.txt  files.txt
src/integrationtest/communication/: internet_socket.cpp  utility.cpp
src/integrationtest/http/: server.cpp
src/integrationtest/socket/: socket.cpp  utility.cpp
src/lib/: CMakeLists.txt  files.txt  hutzn.cpp  hutzn.hpp  version.cpp.in  version.hpp
src/lib/communication/: internet_socket_connection.cpp  internet_socket_connection.hpp  internet_socket_listener.cpp  internet_socket_listener.hpp  socket_connection.cpp  socket_connection.hpp  socket_listener.cpp  socket_listener.hpp  utility.cpp  utility.hpp
src/lib/demux/: demultiplex_handler.cpp  demultiplex_handler.hpp  demultiplexer.cpp  demultiplexer.hpp  demultiplexer_ordered_mime_map.cpp  demultiplexer_ordered_mime_map.hpp  disconnect_interface.cpp  disconnect_interface.hpp  error_handler.cpp  error_handler.hpp  error_handler_manager.cpp  error_handler_manager.hpp  handler_manager.cpp  handler_manager.hpp  non_caching_request_processor.cpp  non_caching_request_processor.hpp  request_handler_holder.cpp  request_handler_holder.hpp  request_processor.cpp  request_processor.hpp  reset_error_handler_interface.cpp  reset_error_handler_interface.hpp  usage.cpp  usage.hpp  usage_interface.cpp  usage_interface.hpp
src/lib/http/: request.cpp  request.hpp  response.cpp  response.hpp  server.cpp  server.hpp
src/lib/libhutznohmd/: communication.cpp  demux.cpp  demux.hpp  request.cpp  sockets.cpp
src/lib/request/: accept_parser.cpp  accept_parser.hpp  base64.cpp  base64.hpp  lexer.cpp  lexer.hpp  md5.cpp  md5.hpp  memory_allocating_request.cpp  memory_allocating_request.hpp  memory_allocating_response.cpp  memory_allocating_response.hpp  mime_data.hpp  mime_handler.cpp  (+9 more)
src/libhutznohmd/: demux.cpp  demux.hpp  multiplexer.cpp  multiplexer.hpp  request.cpp  request.hpp  requests.cpp  requests.hpp  sockets.cpp  sockets.hpp  types.hpp
src/request/: base64.cpp  base64.hpp  lexer.cpp  lexer.hpp  md5.cpp  md5.hpp  mime_data.hpp  mime_handler.cpp  mime_handler.hpp  parser_data.cpp  parser_data.hpp  request.cpp  request.hpp  response.cpp  response.hpp  timestamp.cpp  timestamp.hpp  uri.cpp  uri.hpp
src/socket/: connection.cpp  connection.hpp  connection_socket.cpp  connection_socket.hpp  connectionsocket.cpp  connectionsocket.hpp  inputsocketstream.cpp  inputsocketstream.hpp  listener.cpp  listener.hpp  listener_socket.cpp  listener_socket.hpp  listenersocket.cpp  listenersocket.hpp  outputsocketstream.cpp  outputsocketstream.hpp  socket_interface.hpp  socketinterface.hpp  utility.cpp  utility.hpp
src/unittest/: CMakeLists.txt  files.txt
src/utility/: character_validation.hpp  common.cpp  common.hpp  date_calculation.cpp  date_calculation.hpp  parsing.hpp  select_char_map.hpp  split.hpp  trie.hpp
unittest/: CMakeLists.txt  files.txt  mock_socket_interface.hpp  mock_socket_interfaces.hpp
unittest/demux/: demultiplex_handler.cpp  demultiplexer.cpp  demultiplexer_accept_map.cpp  demultiplexer_handler.cpp  demultiplexer_ordered_mime_map.cpp  mock_demux_disconnect_interface.hpp  mock_disconnect_interface.hpp
unittest/http/: _server.cpp  httpparser.cpp  request.cpp  response.cpp  server.cpp
unittest/libhutznohmd/: mock_demux.hpp  mock_request.hpp  mock_sockets.hpp
unittest/request/: lexer.cpp  md5.cpp  mime_data.cpp  parser_data.cpp  request.cpp  timestamp.cpp  uri.cpp
unittest/socket/: inputsocketstream.cpp  mock_socket_interface.hpp  mocksocketinterface.hpp
unittest/utility/: character_validation.cpp  common.cpp  parsing.cpp  select_char_map.cpp  trie.cpp
(+243 files in other folders)
