INCLUDE(toolchain)

FILE(GLOB_RECURSE SOURCES *.cpp *.c)
FILE(GLOB_RECURSE HEADERS *.hpp *.h)

ADD_EXECUTABLE(example_performance ${SOURCES} ${HEADERS})
STYLE_FILES(example_performance ${SOURCES} ${HEADERS})

LINK_DIRECTORIES("${CMAKE_BINARY_DIR}/lib")
TARGET_LINK_LIBRARIES(example_performance restsrv)

INCLUDE_DIRECTORIES("${PROJECT_DIR}/examples/performance")
INCLUDE_DIRECTORIES("${PROJECT_DIR}/src")
